# template-modern-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
script/: bootstrap.py  cibuild.py  run-in-vsenv.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/project_version/: CMakeLists.txt  project_version.cpp.in  project_version.h
